# leansig

./: Cargo.toml  LICENSE  README.md  benchmark-cpu.sh  benchmark-cuda.sh  benchmark-risc0-cpu.sh  benchmark-risc0-cuda.sh  benchmark-sp1-cpu.sh  benchmark-sp1-cuda.sh
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: code.rs  hash.rs  hash_chain.rs  hash_tree.rs  lib.rs  sp1_keccak.rs  spec.rs
crates/host/: Cargo.toml
crates/host/benches/: xmss_benchmark.rs
crates/host/src/: lib.rs  main.rs
crates/methods/guest/: Cargo.toml
crates/methods/guest/src/: main.rs
crates/risc0/host/: Cargo.toml
crates/risc0/host/benches/: xmss_benchmark.rs
crates/risc0/host/src/: main.rs
crates/risc0/methods/: Cargo.toml  build.rs
crates/risc0/methods/guest/: Cargo.toml
crates/risc0/methods/guest/src/: main.rs
crates/risc0/methods/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/sp1/guest/: Cargo.toml
crates/sp1/guest/src/: main.rs
crates/sp1/host/: Cargo.toml
crates/sp1/host/benches/: xmss_benchmark.rs
crates/sp1/host/src/: main.rs
src/: code.rs  hash.rs  hash_chain.rs  hash_tree.rs  lib.rs  main.rs  spec.rs
