[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/core",
    "crates/risc0/host",
    "crates/risc0/methods",
    "crates/sp1/host",
    "crates/sp1/guest"
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.crates-io]
# Use SP1's fork of tiny-keccak that includes the succinct feature for keccak precompile
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
