[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/core",
    "crates/risc0/host",
    "crates/risc0/methods",
    "crates/sp1/host"
]
exclude = ["crates/sp1/guest"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 0
lto = true
