[package]
name = "leansig-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable SP1 zkVM optimizations
sp1 = []

[dependencies]
bitvec = "1.0.1"
hex-literal = "1.0.0"
rand = "0.9.2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
