[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
methods = { path = "../methods" }
leansig-core = { path = "../core" }
leansig-shared = { path = "../shared" }
rand = "0.9.2"
risc0-zkvm = { version = "^3.0.3" }
serde = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
