[package]
name = "xmss_aggregate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std", "unstable"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
shared = { path = "../../shared" }
leansig-core = { path = "../../core" }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
