[package]
name = "sp1-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "5.2.1"
leansig-shared = { path = "../../shared" }
leansig-core = { path = "../../core" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bincode = "1.3"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
leansig-shared = { path = "../../shared" }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
[[bench]]
name = "xmss_benchmark"
harness = false
